WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191330
IntersectionObserverEntry doesn't keep JS wrappers of rects alive
https://bugs.webkit.org/show_bug.cgi?id=191330
Summary
IntersectionObserverEntry doesn't keep JS wrappers of rects alive
Ali Juma
Reported
2018-11-06 14:22:32 PST
Following up on rniwa's review comment in
bug 190235
, we need to make sure that wrappers of the DOMRectReadOnly objects in IntersectionObserverEntry get visited during GC.
Attachments
Patch
(7.40 KB, patch)
2018-11-07 06:46 PST
,
Ali Juma
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ali Juma
Comment 1
2018-11-07 06:46:43 PST
Created
attachment 354087
[details]
Patch
Chris Dumez
Comment 2
2018-11-07 09:43:19 PST
Comment on
attachment 354087
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2018-11-07 10:30:38 PST
Comment on
attachment 354087
[details]
Patch Clearing flags on attachment: 354087 Committed
r237929
: <
https://trac.webkit.org/changeset/237929
>
WebKit Commit Bot
Comment 4
2018-11-07 10:30:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-11-07 10:32:30 PST
<
rdar://problem/45879997
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug