IntersectionObserverEntry doesn't keep JS wrappers of rects alive https://bugs.webkit.org/show_bug.cgi?id=191330

Reviewed by Chris Dumez.

Source/WebCore:

Retain wrappers of each rect in an IntersectionObserverEntry as long as the entry's wrapper
is alive, by adding these wrappers as opaque roots.

Test: intersection-observer/intersection-observer-entry-keeps-js-wrappers-of-rects-alive.html

* bindings/js/JSIntersectionObserverEntryCustom.cpp:
(WebCore::JSIntersectionObserverEntry::visitAdditionalChildren):
* dom/DOMRectReadOnly.idl:
* page/IntersectionObserverEntry.h:
(WebCore::IntersectionObserverEntry::rootBounds const): Make this return a raw pointer instead of a RefPtr so that it
can be called in JSIntersectionObserverEntry::visitAdditionalChildren, which can be called from non-main threads.
(WebCore::IntersectionObserverEntry::boundingClientRect const): Ditto.
(WebCore::IntersectionObserverEntry::intersectionRect const): Ditto.

LayoutTests:

Add test coverage.

* intersection-observer/intersection-observer-entry-keeps-js-wrappers-of-rects-alive-expected.txt: Added.
* intersection-observer/intersection-observer-entry-keeps-js-wrappers-of-rects-alive.html: Added.


Canonical link: https://commits.webkit.org/206168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237929 268f45cc-cd09-0410-ab3c-d52691b4dbfc