Source/WebCore/page/IntersectionObserverEntry.h
@@ -57,9 +57,9 @@ public:
     }
     
     double time() const { return m_time; }
-    RefPtr<DOMRectReadOnly> rootBounds() const { return m_rootBounds; }
-    RefPtr<DOMRectReadOnly> boundingClientRect() const { return m_boundingClientRect; }
-    RefPtr<DOMRectReadOnly> intersectionRect() const { return m_intersectionRect; }
+    DOMRectReadOnly* rootBounds() const { return m_rootBounds.get(); }
+    DOMRectReadOnly* boundingClientRect() const { return m_boundingClientRect.get(); }
+    DOMRectReadOnly* intersectionRect() const { return m_intersectionRect.get(); }
     Element* target() const { return m_target.get(); }
 
     bool isIntersecting() const { return m_isIntersecting; }
